--- a/JenkinExtentTest/test-output/ExtentReport/MyReport.html
+++ b/JenkinExtentTest/test-output/ExtentReport/MyReport.html
@@ -33,11 +33,11 @@
 <ul class="nav-right">
 <li class="m-r-10">
 <a href="#"><span class="badge badge-primary">OrangeHRMProject Report
-<img src='C:\Users\hp\Downloads\JenkinsExtent-master\JenkinsExtent-master\JenkinExtentTest\Logo\ohrm_branding.png'/>
+<img src='C:\Users\hp\git\Eureka\JenkinExtentTest\Logo\orange.png'/>
 </span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Nov 5, 2024 02:21:29 AM</span></a>
+<a href="#"><span class="badge badge-primary">Nov 5, 2024 02:49:57 AM</span></a>
 </li>
 </ul>
 </div>
@@ -83,7 +83,7 @@
           <div class="test-detail">
             <p class="name">sampleCase</p>
             <p class="text-sm">
-              <span>2:21:42 AM</span> / <span>00:00:00:027</span>
+              <span>2:50:07 AM</span> / <span>00:00:00:012</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -92,9 +92,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">sampleCase</h5>
-<span class='badge badge-success'>11.05.2024 2:21:42 AM</span>
-<span class='badge badge-danger'>11.05.2024 2:21:42 AM</span>
-<span class='badge badge-default'>00:00:00:027</span>
+<span class='badge badge-success'>11.05.2024 2:50:07 AM</span>
+<span class='badge badge-danger'>11.05.2024 2:50:07 AM</span>
+<span class='badge badge-default'>00:00:00:012</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -107,7 +107,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>2:21:42 AM</td>
+        <td>2:50:07 AM</td>
         <td>
           Pass Test case is: sampleCase
         </td>
@@ -191,7 +191,7 @@
           <div class="test-detail">
             <p class="name">loginPageTest</p>
             <p class="text-sm">
-              <span>2:21:56 AM</span> / <span>00:00:01:614</span>
+              <span>2:50:15 AM</span> / <span>00:00:01:454</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -200,9 +200,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">loginPageTest</h5>
-<span class='badge badge-success'>11.05.2024 2:21:56 AM</span>
-<span class='badge badge-danger'>11.05.2024 2:21:57 AM</span>
-<span class='badge badge-default'>00:00:01:614</span>
+<span class='badge badge-success'>11.05.2024 2:50:15 AM</span>
+<span class='badge badge-danger'>11.05.2024 2:50:17 AM</span>
+<span class='badge badge-default'>00:00:01:454</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -215,7 +215,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>2:21:57 AM</td>
+        <td>2:50:17 AM</td>
         <td>
           Pass Test case is: loginPageTest
         </td>
@@ -232,7 +232,7 @@
           <div class="test-detail">
             <p class="name">loginTest</p>
             <p class="text-sm">
-              <span>2:22:03 AM</span> / <span>00:00:04:277</span>
+              <span>2:50:20 AM</span> / <span>00:00:07:615</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -241,9 +241,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">loginTest</h5>
-<span class='badge badge-success'>11.05.2024 2:22:03 AM</span>
-<span class='badge badge-danger'>11.05.2024 2:22:07 AM</span>
-<span class='badge badge-default'>00:00:04:277</span>
+<span class='badge badge-success'>11.05.2024 2:50:20 AM</span>
+<span class='badge badge-danger'>11.05.2024 2:50:27 AM</span>
+<span class='badge badge-default'>00:00:07:615</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=7</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -256,7 +256,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>2:22:07 AM</td>
+        <td>2:50:27 AM</td>
         <td>
           Pass Test case is: loginTest
         </td>
@@ -273,7 +273,7 @@
           <div class="test-detail">
             <p class="name">verifyForgotPassword</p>
             <p class="text-sm">
-              <span>2:22:20 AM</span> / <span>00:00:01:399</span>
+              <span>2:50:34 AM</span> / <span>00:00:00:898</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -282,9 +282,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyForgotPassword</h5>
-<span class='badge badge-success'>11.05.2024 2:22:20 AM</span>
-<span class='badge badge-danger'>11.05.2024 2:22:21 AM</span>
-<span class='badge badge-default'>00:00:01:399</span>
+<span class='badge badge-success'>11.05.2024 2:50:34 AM</span>
+<span class='badge badge-danger'>11.05.2024 2:50:35 AM</span>
+<span class='badge badge-default'>00:00:00:898</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=8</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -297,7 +297,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>2:22:21 AM</td>
+        <td>2:50:35 AM</td>
         <td>
           Pass Test case is: verifyForgotPassword
         </td>
@@ -321,13 +321,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Nov 5, 2024 02:21:29 AM</h3>
+<h3>Nov 5, 2024 02:49:57 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Nov 5, 2024 02:22:22 AM</h3>
+<h3>Nov 5, 2024 02:50:35 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -417,7 +417,7 @@
 </div></div>
 <script>
 var timeline = {
-"sampleCase":0.027,"loginPageTest":1.614,"loginTest":4.277,"verifyForgotPassword":1.399
+"sampleCase":0.012,"loginPageTest":1.454,"loginTest":7.615,"verifyForgotPassword":0.898
 };
 </script>
 <div class="row">
